--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
         <div class="pricing-column col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
-              <h3>Chihuahua</h3>
+              <h3>Free</h3>
             </div>
             <div class="card-body d-flex flex-column">
-              <h2 class="price-text">Free</h2>
+              <h2 class="price-text">$0/mo</h2>
               <p>5 Matches Per Day</p>
               <p>10 Messages Per Day</p>
               <p>Unlimited App Usage</p>
@@ -184,7 +184,7 @@
         <div class="pricing-column col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
-              <h3>Labrador</h3>
+              <h3>Gold</h3>
             </div>
             <div class="card-body d-flex flex-column">
               <h2 class="price-text">$49/mo</h2>
@@ -201,7 +201,7 @@
         <div class="pricing-column col-lg-4">
           <div class="card">
             <div class="card-header">
-              <h3>Mastiff</h3>
+              <h3>Diamond</h3>
             </div>
             <div class="card-body d-flex flex-column">
               <h2 class="price-text">$99/mo</h2>
